# CMakeDemo

./: CMakeLists.txt
doc/: HelloWorld3.txt
src/: CMakeLists.txt  main.cpp
src/libs/: CMakeLists.txt  display.cpp  display.h
